Migration from the SQLite to the PostreSQL

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
-DATABASE_URL=postgresql://django:django@db-1/tasks
 CELERY_BROKER_URL=amqp://rabbit:rabbit@rabbitmq-1/queue
+
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@fake.tld
+DJANGO_SUPERUSER_PASSWORD=admin
+
+RABBITMQ_DEFAULT_USER=rabbit
+RABBITMQ_DEFAULT_PASS=rabbit
+RABBITMQ_DEFAULT_VHOST=queue
+
+POSTGRES_USER=django
+POSTGRES_PASSWORD=django
+POSTGRES_DB=tasks
