--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,25 @@ version: '3.3'
 services:
   rabbitmq:
     image: rabbitmq
-    environment:
-      - RABBITMQ_DEFAULT_USER=rabbit
-      - RABBITMQ_DEFAULT_PASS=rabbit
-      - RABBITMQ_DEFAULT_VHOST=queue
+    env_file:
+      - .env
     ports:
       - "21001:5672"
       - "21002:15672"
+  db:
+    image: postgres
+    env_file:
+      - .env
+    ports:
+      - "21003:5432"
   web:
     build: .
     restart: always
-    command: python manage.py runserver 0.0.0.0:8000
+    command: bash -c "
+        python manage.py migrate --noinput &&
+        python manage.py createsuperuser --noinput &&
+        python manage.py runserver 0.0.0.0:8000
+      "
     env_file:
       - .env
     ports:
@@ -20,8 +28,10 @@ services:
     volumes:
       - .:/code
     links:
+      - db
       - rabbitmq
     depends_on:
+      - db
       - rabbitmq
   queue-default:
     build: .
@@ -32,6 +42,8 @@ services:
     volumes:
       - .:/code
     links:
+      - db
       - rabbitmq
     depends_on:
+      - db
       - rabbitmq
