--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     command: bash -c "
         python manage.py migrate --noinput &&
-        python manage.py createsuperuser --noinput &&
+        python manage.py createsuperuser --noinput || true &&
         python manage.py runserver 0.0.0.0:8000
       "
     env_file:
